adicionando âncoras nos links do menu

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </div>
         <div id="menu">
             <ul>
-                <li> <a href=""> Meus Serviços </a> </li>
-                <li> <a href=""> Fale Comigo </a> </li>
-                <li> <a href=""> Portfólio </a> </li>
+                <li> <a href="#services"> Meus Serviços </a> </li>
+                <li> <a href="#contact"> Fale Comigo </a> </li>
+                <li> <a href="#portfolioTitle"> Portfólio </a> </li>
             </ul>
         </div>
     </div>
@@ -29,7 +29,7 @@
             <p class="gray">Sou programadora e gostaria de apresentar meu
 trabalho para você através deste portfólio.</p>
             <div id="Cta">
-                <a class=buttonCta href=""> Meus Serviços </a>
+                <a class=buttonCta href="#services"> Meus Serviços </a>
             </div>
         </div>
         <div id="headerImg">
